hphp/hack/test/typecheck/readonly/prop_in_constructor.php.exp
File "prop_in_constructor.php", line 15, characters 3-14:
Invalid property assignment (Typing[4411])
  File "prop_in_constructor.php", line 15, characters 18-34:
  This expression is readonly
  File "prop_in_constructor.php", line 6, characters 69-70:
  But it's being assigned to a mutable property
File "prop_in_constructor.php", line 17, characters 12-15:
This property returns a readonly value. It must be explicitly wrapped in a readonly expression. (Typing[4412])
  File "prop_in_constructor.php", line 6, characters 47-48:
  The property is defined here.
